--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         let tieCounter = 0;
         let playerIn;
         while(scorePlayer < 3 && scoreComp < 3){
-            playerIn = window.prompt("Enter your choice: ");
+            playerIn = window.prompt("Test Your Luck: Rock, Paper, or Scissors");
         if(singleRound(playerIn, computerPlay()) === "Win"){
             scorePlayer += 1;
             console.log("Player Score: " + scorePlayer);
